# Base64

./: .gitignore  CMakeLists.txt
src/: Base64.cpp  Base64.h  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/base64_tests/: Base64Tests.cpp  CMakeLists.txt
tests/base64_tests/resources/: text.txt
